Bug 659215: Try harder to get a JSContext in PostMessageEvent so that we don't leak if the window has been closed. r=bent